bug: wrong padding for header

--- a/src/scss/Header.scss
+++ b/src/scss/Header.scss
@@ -37,7 +37,7 @@
         padding: 5vh 10vw;
         gap: 5.5rem;
         @media (max-width: 1000px) {
-            padding: 5vh 15vw;
+            padding: 5vh 12.5vw;
             flex-direction: column;
             gap: 3rem;
         }
